<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.motomecha.app.Global_classes.LoginActivity"
    android:background="@drawable/background_all"
    tools:showIn="@layout/activity_login">
<RelativeLayout
    android:layout_width="wrap_content"
    android:padding="3dp"
    android:layout_margin="30dp"
    android:layout_height="wrap_content"
    android:background="@drawable/registration_background"
    tools:layout_editor_absoluteY="133dp"
    tools:layout_editor_absoluteX="42dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/relativeLayout">

    <com.motomecha.app.Global_classes.MyTextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:textScaleX="1.2"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textAllCaps="true"
        android:layout_marginTop="13dp"
        android:text="@string/logintext"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_alignParentStart="true" />



    <EditText
        android:id="@+id/mobile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:ems="10"
        android:maxLength="10"
        android:digits="0123456789"
        android:maxLines="1"
        android:textColorHint="@color/hint_white"
android:textColor="@color/white"
        android:hint="@string/mobile_number"
        android:backgroundTint="@color/white"
        android:inputType="number" />

    <com.motomecha.app.Global_classes.MyTextView
        android:id="@+id/textView3"
        android:textScaleX="1.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:text="@string/tandc"
        android:textSize="14sp"
        />

    <ImageButton
        android:id="@+id/login_continue"
        android:layout_width="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitXY"

        android:layout_height="wrap_content"
    app:srcCompat="@drawable/continue_button"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

</RelativeLayout>
</RelativeLayout>
