...
    <string name="registration_login">Registration</string>
    <string name="regist_name">NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="address_registration">ADDRESS</string>
    <string name="welcm_screen">Welcome to Moto Mecha</string>
    <string name="title_activity_intro">Moto Mecha</string>
    <string name="intro_next">Next</string>
    <string name="intro_skip">Skip</string>
    <string name="hotline_file_provider_authority">com.motomecha.app</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
